tests/baselines/reference/typeOnlyMerge3.errors.txt
tests/cases/conformance/externalModules/b.ts(1,10): error TS2440: Import declaration conflicts with local declaration of 'A'.
tests/cases/conformance/externalModules/c.ts(2,1): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
tests/cases/conformance/externalModules/c.ts(3,1): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
tests/cases/conformance/externalModules/c.ts(4,1): error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
tests/cases/conformance/externalModules/c.ts(4,1): error TS2349: This expression is not callable.
  Type 'typeof A' has no call signatures.


==== tests/cases/conformance/externalModules/a.ts (0 errors) ====
    function A() {}
    export type { A };
    
==== tests/cases/conformance/externalModules/b.ts (1 errors) ====
    import { A } from "./a";
             ~
!!! error TS2440: Import declaration conflicts with local declaration of 'A'.
    namespace A {
      export const displayName = "A";
    }
    export { A };
    
==== tests/cases/conformance/externalModules/c.ts (4 errors) ====
    import { A } from "./b";
    A;
    ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 tests/cases/conformance/externalModules/a.ts:2:15: 'A' was exported here.
    A.displayName;
    ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 tests/cases/conformance/externalModules/a.ts:2:15: 'A' was exported here.
    A();
    ~
!!! error TS1362: 'A' cannot be used as a value because it was exported using 'export type'.
!!! related TS1377 tests/cases/conformance/externalModules/a.ts:2:15: 'A' was exported here.
    ~
!!! error TS2349: This expression is not callable.
!!! error TS2349:   Type 'typeof A' has no call signatures.
    